Fixed spacing between header <p> text and bottom dashed border. Need to work on a parametric mixin next to modify buttons in content-pick section.

--- a/css/index.css
+++ b/css/index.css
@@ -170,17 +170,22 @@ img {
 }
 .navigation {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: baseline;
-  border-bottom: 1px dashed black;
-  margin: 2% auto;
+  border-bottom: 2px dashed gray;
+  margin: 2% auto 0 auto;
+  padding-bottom: 2%;
 }
 .navigation h1 {
-  width: 50%;
+  width: 35%;
+  padding: 2% auto;
 }
 .navigation a {
+  font-size: 1.8rem;
   text-decoration: none;
+  font-weight: bold;
   color: black;
+  margin-right: 2%;
 }
 .navigation a:hover {
   text-decoration: underline;
@@ -196,6 +201,11 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .header-section .text {
+  margin: 2% auto 2%;
+  border-bottom: 2px dashed gray;
+  padding-bottom: 2%;
 }
 .home .content-section {
   margin: 30px 0;
