--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,13 +1,19 @@
 .home {
 
+  .header-section {
+    .text {
+      margin: 2% auto 2%;
+      border-bottom: 2px dashed gray;
+      padding-bottom: 2%;
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
