--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,18 +1,23 @@
 // Navigation Styles here
 .navigation {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: baseline;
-    border-bottom: 1px dashed black;
-    margin: 2% auto;
+    border-bottom: 2px dashed gray;
+    margin: 2% auto 0 auto;
+    padding-bottom: 2%;
 
     h1 {
-        width: 50%;
+        width: 35%;
+        padding: 2% auto;
     }
 
     a {
+        font-size: 1.8rem;
         text-decoration: none;
+        font-weight: bold;
         color: black;
+        margin-right: 2%;
         &:hover {
             text-decoration: underline;
             color: teal;
